Se agrego un <p> al body

--- a/primerArchivo.html
+++ b/primerArchivo.html
@@ -6,6 +6,8 @@
     <title>Primer archivo de github</title>
 </head>
 <body>
-    
+    <div>
+        <p>Este cambio hace parte del segundo commit</p>
+    </div>
 </body>
 </html>
