Agregando estilos a las etiquetas y poniendo imagen de fondo

--- a/primerArchivo.html
+++ b/primerArchivo.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer archivo de github</title>
 </head>
+<style>
+    body{
+        background-image: url("mazdacx30.jpg");
+    }
+    p{
+        color: aliceblue;
+        font-size: large;
+    }
+</style>
 <body>
     <div>
         <p>Este cambio hace parte del segundo commit</p>
     </div>
     <div>
-        <h>Este cambio hace parte del tercer commit</h>
+        <p>Este cambio hace parte del tercer commit</p>
     </div>
 </body>
 </html>
