Agregamos un cuadro de texto

--- a/primerArchivo.html
+++ b/primerArchivo.html
@@ -22,5 +22,7 @@
         <p>Este cambio hace parte del tercer commit</p>
     </div>
     <button>Nuevo boton</button>
+
+    <input type = "text" placeholder = "ingresa texto">
 </body>
 </html>
