Agregamos cuadro de numero

--- a/primerArchivo.html
+++ b/primerArchivo.html
@@ -21,5 +21,7 @@
     <div>
         <p>Este cambio hace parte del tercer commit</p>
     </div>
+
+    <input type = "number" placeholder="9999">
 </body>
 </html>
