Agregue un h1 al responsive design

--- a/primerArchivo.html
+++ b/primerArchivo.html
@@ -15,6 +15,7 @@
     }
 </style>
 <body>
+    <h1>Este es de responsive design</h1>
     <div>
         <p>Este cambio hace parte del segundo commit</p>
     </div>
